--- a/deploy/templates/subversion_servers.j2
+++ b/deploy/templates/subversion_servers.j2
@@ -1,6 +1,6 @@
 [groups]
 
 [global]
-# http-proxy-exceptions = 
+http-proxy-exceptions = {{ proxy_exceptions }}
 http-proxy-host = {{ proxy_host }}
 http-proxy-port = {{ proxy_port }}
